<resources>
    <string name="app_name">Speech2Me</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="clue"><u>רוצה רמז?</u></string>
    <string name="good_job"><b>מצויין!</b></string>
    <string name="sign_up"><u>משתמש חדש?</u></string>
    <string name="student_goal_header"><b>מטרה:</b></string>
    <string name="student_curr_level_header"><b>שלב נוכחי:</b></string>
    <string name="student_extra_details_level_header"><b>פרטים על שלב:</b></string>
    <string name="student_extra_details_word_header"><b>פרטים על המילה:</b></string>
    <string name="student_extra_num_tries_header"><b>מספר ניסיונות:</b></string>
    <string name="student_clue_used_header"><b>שימוש ברמז</b></string>
    <string name="student_level_completed_header"><b>שלב הושלם</b></string>
    <string name="student_notes_header"><b>הערות (המטופל לא יראה אותן):</b></string>
    <string name="try_again"><b>נסו שוב...</b></string>
    <string name="answer"><b>רוצה לענות!</b></string>
    <string name="answer_picture"><b>מה בתמונה?</b></string>
    <string name="answer_audio"><b>מה שמעת?</b></string>
    <string name="audio_game"><b>תרגול חיקוי קולי</b></string>
    <string name="picture_game"><b>תרגול זיהוי תמונה</b></string>
    <string name="amount_of_students"><b>מספר התלמידים הרשומים הינו</b></string>
    <string name="watch_student_statistics"><u>לצפייה בתוצאות התלמידים</u></string>
    <string name="level">שלב</string>
    <string name="save_student_notes">שמור הערה</string>
    <string name="copyrights">© 2019 Speech2Me, All rights reserved</string>
    <string name="aboutText">
                Speech2Me הינה פלטפורמה לתרגול וחיזוק מיומנויות לילדים בעלי לקויות בתקשורת אישית.
האפליקציה מכילה משחקים חווייתיים למשתמש, המאפשרים תרגול של חיקוי קולי וזיהוי מילים על ידי עזרים ויזואליים וקוליים ברמות שונות.
האפליקציה נכתבה בשפת Java בסביבת Android Studio,
עם שימוש בממשק Google Speech to Text.
נתוני האפליקציה נשמרים בשרת ייעודי שנכתב בשפת Python המאוחסן ורץ בשירות Heroku.
        \nתודות:\n
        אבישי רם, מעצב גרפי.\n
        יערה מופז, קלינאית תקשורת.
    </string>
    <string name="contact"><u>צור קשר</u></string>
    <string name="conditions"><u>תנאי שימוש</u></string>
    <string name="play"><u>למשחק</u></string>
    <string name="teacher_type"><u>teacher</u></string>
    <string name="student_type"><u>student</u></string>
    <string name="game_instructions_header"><u>הוראות</u></string>
    <string name="game_instructions_audio">
        <b>ברוכים הבאים!\n</b>
        <u>איך משחקים?\n</u>
        1. תחילה עליכם להאזין למילה על ידי לחיצה על כפתור ההשמעה (הכפתור עם המשולש הירוק).\n
        2. לאחר ששמעתם את המילה, לחצו על כפתור ההקלטה ואימרו את המילה ששמעתם. בסוף ההקלטה לחצו על אותו כפתור כדי לסיים את ההקלטה.\n
        האפליקציה תגיד לכם האם זיהיתם את המילה בהצלחה.\n
        <u>הערות:\n</u>
        1. אם המילה קצת קשה - תמיד ניתן להשתמש בכפתור הרמז.\n
        2. ניתן לדלג על התמונה הנוכחית או לחזור למסך הבית בכל שלב.\n
        בהצלחה!
    </string>
    <string name="game_instructions_picture">
        <b>ברוכים הבאים!\n</b>
        <u>איך משחקים?\n</u>
        1. תחילה עליכם להסתכל על התמונה המופיעה על המסך.\n
        2. לאחר שראיתם את התמונה, לחצו על כפתור ההקלטה ואימרו מה בתמונה. בסוף ההקלטה לחצו על אותו כפתור כדי לסיים את ההקלטה.\n
        האפליקציה תגיד לכם האם זיהיתם את המילה בהצלחה.\n
        <u>הערות:\n</u>
        1. אם המילה קצת קשה - תמיד ניתן להשתמש בכפתור הרמז.\n
        2. ניתן לדלג על התמונה הנוכחית או לחזור למסך הבית בכל שלב.\n
        בהצלחה!
    </string>
    <string name="goal_audio_with_code">חיקוי - 1</string>
    <string name="goal_audio_without_code">חיקוי</string>
    <string name="goal_picture_with_code">זיהוי מילה - 2</string>
    <string name="goal_picture_without_code">זיהוי מילה</string>
    <string name="teacher_instructions"><b>על מנת שנוכל להתאים את המשחק לצורך של המטופל, אנא מסרו למטופל בטרם ההרשמה את הקוד המתאים למטרה אותה אתם רוצים להשיג:</b>
    </string>
    <string name="error_msg">אירעה שגיאה. אנא נסו שנית.</string>
    <string name="to_goals_header"><u>לרשימת המטרות</u></string>
    <string name="help"><u>(?)</u></string>
    <string name="header_word">מילה</string>
    <string name="header_level">שלב</string>
    <string name="header_num_of_tries">מספר נסיונות</string>
    <string name="header_used_clue">נעשה שימוש ברמז</string>
    <string name="header_is_completed">מילה הושלמה</string>
    <string name="no_data_to_show">אין נתונים להצגה</string>
    <string name="teacher_code_info">זהו קוד הזיהוי שלכם. עליכם למסור אותו למטופלים בטרם ההרשמה, כדי שנוכל לקשר אותם אליכם וכך תוכלו לצפות בהתקדמותם.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="code_explanation_header">מהו קוד זיהוי?</string>
    <string name="error_server">אירעה שגיאה בשרת! אנא נסה שנית</string>
    <string name="server_error_login">email or password are incorrect</string>
    <string name="server_error_saving_details">אירעה שגיאה בשמירת הפרטים. אנא נסו שוב מאוחר יותר</string>
    <string name="server_error_get_students">אירעה שגיאה בקבלת הנתונים. אנא נסו שוב מאוחר יותר</string>
    <string name="server_error_update_score">אירעה שגיאה בעדכון התוצאה. אנא חזרו שנית על השלב</string>
    <string name="server_error_update_level">אירעה שגיאה בעדכון השלב. אנא חזרו שנית על השלב</string>
    <string name="server_error_finish_level">אירעה שגיאה בעדכון הפרטים. הנכם מועברים לעמוד הבית. אנא חזרו שנית על השלב</string>
    <string name="server_error_get_user">אירעה שגיאה בטעינת הפרטים. הנכם מועברים לעמוד ההתחברות. אנא נסו להתחבר שנית</string>
    <string name="msg_press_img_to_cont">(לחצו על התמונה להמשך)</string>
</resources>