<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game"
    android:exported="true">
    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="Header"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        android:typeface="sans"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        />

    <ImageView
        android:id="@+id/imageViewProgressBackground"
        android:layout_width="324dp"
        android:layout_height="150dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_rectangle_score"
        android:shadowDx="5"
        android:shadowDy="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeader" />

    <TextView
        android:id="@+id/textViewProgress"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="252dp"
        android:layout_marginLeft="252dp"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:text="התקדמות"
        android:textAlignment="textStart"
        android:textColor="@color/colorText"
        android:textDirection="rtl"
        android:textSize="15sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="@+id/imageViewProgressBackground"
        app:layout_constraintTop_toTopOf="@+id/imageViewProgressBackground" />

    <TextView
        android:id="@+id/textViewYourAmountOfStudents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:gravity="start"
        android:text="@string/amount_of_students"
        android:textAlignment="textStart"
        android:textColor="@color/colorText"
        android:textDirection="rtl"
        android:textSize="15sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="@+id/imageViewProgressBackground"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="@+id/imageViewProgressBackground"
        app:layout_constraintTop_toBottomOf="@+id/textViewProgress" />

    <TextView
        android:id="@+id/textViewAmountOfStudents"
        android:layout_width="134dp"
        android:layout_height="67dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:fontFamily="@font/heebo_regular"
        android:gravity="start"
        android:text="Amount"
        android:textAlignment="textStart"
        android:textColor="@color/colorText"
        android:textDirection="rtl"
        android:textFontWeight="500"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewProgressBackground"
        app:layout_constraintHorizontal_bias="0.988"
        app:layout_constraintStart_toStartOf="@+id/imageViewProgressBackground"
        app:layout_constraintTop_toBottomOf="@+id/textViewYourAmountOfStudents" />

    <TextView
        android:id="@+id/textViewWatchStatistics"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="start"
        android:text="@string/watch_student_statistics"
        android:textAlignment="textStart"
        android:textColor="@color/colorText"
        android:textDirection="rtl"
        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewProgressBackground"
        app:layout_constraintEnd_toEndOf="@+id/imageViewProgressBackground"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="@+id/imageViewProgressBackground" />

    <ImageView
        android:id="@+id/imageViewGameBackground"
        android:layout_width="324dp"
        android:layout_height="150dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_rectangle_score"
        android:shadowDx="5"
        android:shadowDy="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProgressBackground" />

    <TextView
        android:id="@+id/textViewPracticeGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:text="התאמת משחק"
        android:textAlignment="textStart"
        android:textColor="@color/colorText"
        android:textDirection="rtl"
        android:textSize="15sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="@+id/imageViewGameBackground"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="@+id/imageViewGameBackground"
        app:layout_constraintTop_toTopOf="@+id/imageViewGameBackground" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="400px"
        android:layout_marginTop="36dp"
        android:background="@android:drawable/btn_dropdown"
        android:radius="5dp"
        android:spinnerMode="dropdown"
        android:text="@string/level"
        app:layout_constraintEnd_toStartOf="@+id/radioGame"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageViewGameBackground"
        app:layout_constraintTop_toTopOf="@+id/imageViewGameBackground" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radioGame"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_gravity="right"
        android:layout_marginTop="8dp"
        android:gravity=""
        android:inputType="text"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/imageViewGameBackground"
        app:layout_constraintTop_toBottomOf="@+id/textViewPracticeGame">

        <RadioButton
            android:id="@+id/radioPictureGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:layoutDirection="rtl"
            android:text="@string/picture_game"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/radioAudioGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:layoutDirection="rtl"
            android:text="@string/audio_game"
            android:textAlignment="center" />

    </RadioGroup>

    <TextView
        android:id="@+id/buttonPlay"
        android:layout_width="96dp"
        android:layout_height="29dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="16dp"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/play"
        android:textColor="@color/colorText"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewGameBackground"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="@+id/imageViewGameBackground"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

</android.support.constraint.ConstraintLayout>